[package]
name = "lola-sumup"
version = "0.4.10"
authors = ["Urs Joss <urs.joss@gmx.ch>"]
edition = "2024"
description = "A cli program to create LoLa specific exports from monthly SumUp reports"
license = "MIT"
homepage = "https://github.com/jococo-ch/lola-sumup"
repository = "https://github.com/jococo-ch/lola-sumup"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono= { version = "0.4", features = ["serde"] }
strum = { version = "0.28" }
strum_macros = { version = "0.28" }
quick-xml = { version = "0.40", features = ["serde"] }
toml = "1.1"
polars_excel_writer = "0.24"
calamine = { version = "0.35", features = ["chrono"] }
rust_xlsxwriter = { version = "0.93", features = ["polars"] }

[dependencies.polars]
version = "0.54"
features = [
    "abs",
    "concat_str",
    "dtype-date",
    "is_in",
    "lazy",
    "regex",
    "round_series",
    "semi_anti_join",
    "strings",
    "temporal",
    "timezones",
]

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.26"

[profile.dev]
opt-level=1

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true

